<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/Label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/label"
        android:textSize="18sp"
        app:layout_constraintBaseline_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
    <TextView
        android:id="@+id/tvCod"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/cod"
        app:layout_constraintBottom_toBottomOf="@+id/etCod"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/etCod" />

    <EditText
        android:id="@+id/etCod"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/informe_o_c_digo"
        android:importantForAutofill="no"
        android:inputType="number"
        android:minHeight="48dp"
        android:textColorHint="#546E7A"
        app:layout_constraintStart_toEndOf="@+id/tvCod"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/data"
        app:layout_constraintBottom_toBottomOf="@+id/etData"
        app:layout_constraintStart_toStartOf="@+id/tvCod"
        app:layout_constraintTop_toTopOf="@+id/etData" />

    <EditText
        android:id="@+id/etData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/informe_a_data"
        android:autofillHints="data"
        android:inputType="date"
        android:minHeight="48dp"
        android:textColorHint="#546E7A"
        app:layout_constraintStart_toEndOf="@+id/tvData"
        app:layout_constraintTop_toBottomOf="@+id/etCod" />

    <TextView
        android:id="@+id/tvTiplan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/tiplan"
        app:layout_constraintBottom_toBottomOf="@+id/etTiplan"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/etTiplan" />

    <Spinner
        android:id="@+id/etTiplan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/informe_o_tiplan"
        android:inputType="text"
        android:minHeight="48dp"
        android:textColorHint="#546E7A"
        android:autofillHints="Tipo Lancamento"
        app:layout_constraintStart_toEndOf="@+id/tvTiplan"
        app:layout_constraintTop_toBottomOf="@+id/etData" />

    <TextView
        android:id="@+id/tvDeslan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/deslan"
        app:layout_constraintBottom_toBottomOf="@+id/etDeslan"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/etDeslan" />

    <Spinner
        android:id="@+id/etDeslan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/informe_o_deslan"
        android:inputType="text"
        android:minHeight="48dp"
        android:textColorHint="#546E7A"
        android:autofillHints="Descricao Lancamento"
        app:layout_constraintStart_toEndOf="@+id/tvDeslan"
        app:layout_constraintTop_toBottomOf="@+id/etTiplan" />

    <TextView
        android:id="@+id/tvVal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/valor"
        android:textColor="#703347"
        app:layout_constraintBottom_toBottomOf="@+id/etVal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/etVal" />

    <EditText
        android:id="@+id/etVal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:autofillHints="valor"
        android:ems="10"
        android:hint="@string/informe_o_valor"
        android:inputType="number"
        android:minHeight="48dp"
        android:textColorHint="#546E7A"
        app:layout_constraintStart_toStartOf="@+id/etDeslan"
        app:layout_constraintTop_toBottomOf="@+id/etDeslan"
        tools:text=""/>

    <Button
        android:id="@+id/btIncluir"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/incluir"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etVal" />

    <Button
        android:id="@+id/btAlterar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/alterar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btIncluir" />

    <Button
        android:id="@+id/btExcluir"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/excluir"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btAlterar" />

    <Button
        android:id="@+id/btPesquisar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/pesquisar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btExcluir" />

    <Button
        android:id="@+id/btListar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/listar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btPesquisar" />
</androidx.constraintlayout.widget.ConstraintLayout>